--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         });
     </script>
 </head>
+<script src="https://cdn.jsdelivr.net/npm/@poe-ai/poe-api@latest/dist/poe.min.js"></script>
 <body class="bg-white dark:bg-gray-900 text-gray-800 dark:text-gray-200 min-h-screen p-4">
     <div class="container mx-auto max-w-3xl">
         <header class="mb-8 text-center">
